# tinydb

./: .gitignore  README.md  pyproject.toml
docs/: 功能测试报告.md  操作手册.md
openspec/specs/btree-index/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/query-execution/: spec.md
openspec/specs/sql-parser/: spec.md
openspec/specs/storage-engine/: spec.md
openspec/specs/transaction-management/: spec.md
openspec/specs/type-system/: spec.md
tests/: conftest.py
tests/integration/: test_cli.py  test_differential_fuzz.py  test_end_to_end.py  test_new_types.py  test_transactions.py
tests/unit/: test_database.py  test_errors.py
tests/unit/catalog/: test_catalog.py  test_schema.py
tests/unit/cli/: __init__.py  test_format.py  test_meta.py  test_repl.py
tests/unit/executor/: test_aggregate.py  test_expressions.py  test_filter.py  test_planner.py  test_scan.py  test_write.py
tests/unit/index/: test_btree.py
tests/unit/parser/: test_lexer.py  (+1 more)
tinydb/: __init__.py  __main__.py  database.py  errors.py
tinydb/catalog/: __init__.py  catalog.py  schema.py
tinydb/cli/: __init__.py  format.py  meta.py  repl.py
tinydb/executor/: __init__.py  aggregate.py  expressions.py  filter.py  heap.py  operator.py  planner.py  result.py  row.py  scan.py  write.py
tinydb/index/: __init__.py  btree.py
tinydb/parser/: __init__.py  ast.py  lexer.py  parser.py
tinydb/storage/: __init__.py  buffer.py  disk.py  freelist.py  page.py
tinydb/txn/: __init__.py  manager.py  recovery.py  wal.py
tinydb/types/: __init__.py  check.py  serialize.py  value.py
(+19 files in other folders)
